# dist-butterfly

./: CMakeLists.txt  Makefile  README.md  TODO  test.cpp  testCHTreeWalker.cpp  testHTreeWalker.cpp
cmake/: config.h.cmake
cmake/toolchains/: BGP-xl_apr2011-essl_4.3.1-1.cmake  BGP-xl_dec2010-essl_4.3.1-1.cmake  BGQ-Vesta-clang-essl.cmake  BGQ-Vesta-gnu-essl.cmake  Ranger-gcc_4.4-mvapich2_1.2-mkl_10.0.1.014.cmake  Ranger-gcc_4.4-mvapich_1.0.1-mkl_10.0.1.014.cmake  Ranger-intel_10.1-mvapich2_1.2-mkl_10.0.1.014.cmake  Ranger-intel_10.1-mvapich_1.0.1-mkl_10.0.1.014.cmake
doc/: Makefile  README
doc/source/: conf.py  index.rst  intro.rst  introduction.rst  reference.rst  using.rst
doc/source/reference/: constants.rst  data.rst
doc/source/reference/data/: array.rst  point_grid.rst  potential.rst  source.rst  weight_grid.rst
include/: BFIO.h  BFIO.hpp  BFIOData.h  BFIOInitializeWeights.h  BFIOLagrange.h  BFIOMPI.h  BFIOPower.h  BFIOScaleWeights.h  BFIOTemplate.h  BFIOTransform.h  BFIOUtil.h  BFIOWeightSummation.h  bfio.hpp  dist-butterfly.hpp
include/BFIO/: BLAS.hpp  ComputeChebyGrid.hpp  Constants.hpp  Data.hpp  FreqToSpatial.hpp  FreqWeightPartialRecursion.hpp  FreqWeightRecursion.hpp  HTree.hpp  InitializeWeights.hpp  LRP.hpp  Lagrange.hpp  MPI.hpp  MapToGlobalLoop.hpp  Pow.hpp  Power.hpp  ScaleWeights.hpp  SpatialWeightPartialRecursion.hpp  SpatialWeightRecursion.hpp  SwitchToSpatialInterp.hpp  Template.hpp  Transform.hpp  Util.hpp  WeightSummation.hpp
include/BFIO/Structures/: Data.hpp  HTree.hpp  LRP.hpp  LowRankPotential.hpp  LowRankSource.hpp  PhaseFunctor.hpp
include/BFIO/Tools/: BLAS.hpp  Lagrange.hpp  LocalData.hpp  MPI.hpp  Twiddle.hpp  Uniform.hpp
include/BFIO/Transform/: FreqWeightRecursion.hpp  InitializeWeights.hpp  SpatialWeightRecursion.hpp  SwitchToSpatialInterp.hpp
include/bfio/: config.h.cmake  constants.hpp  fio_from_ft.hpp  freq_to_spatial.hpp  functors.hpp  general_fio.hpp  interpolative_nuft.hpp  inuft.hpp  lagrangian_nuft.hpp  lnuft.hpp  nuft.hpp  rfio.hpp  structures.hpp  tools.hpp
include/bfio/fio_from_ft/: context.hpp  initialize_weights.hpp  potential_field.hpp  source_weight_recursion.hpp  switch_to_target_interp.hpp  target_weight_recursion.hpp
include/bfio/freq_to_spatial/: freq_weight_recursion.hpp  initialize_weights.hpp  spatial_weight_recursion.hpp  switch_to_spatial_interp.hpp
include/bfio/functors/: amplitude.hpp  amplitude_functor.hpp  phase.hpp  phase_functor.hpp
include/bfio/general_fio/: context.hpp  initialize_weights.hpp  potential_field.hpp  source_weight_recursion.hpp  switch_to_target_interp.hpp  target_weight_recursion.hpp
include/bfio/interpolative_nuft/: context.hpp  form_check_potentials.hpp  form_equivalent_sources.hpp  initialize_check_potentials.hpp  potential_field.hpp
include/bfio/inuft/: context.hpp  form_check_potentials.hpp  form_equivalent_sources.hpp  initialize_check_potentials.hpp  potential_field.hpp
include/bfio/lagrangian_nuft/: context.hpp  dot_product.hpp  ft_phases.hpp  potential_field.hpp  switch_to_target_interp.hpp
include/bfio/lnuft/: context.hpp  ft_phases.hpp  potential_field.hpp  switch_to_target_interp.hpp
include/bfio/nuft/: context.hpp  dot_product.hpp  potential_field.hpp  switch_to_target_interp.hpp
include/bfio/rfio/: context.hpp  initialize_weights.hpp  potential_field.hpp  source_weight_recursion.hpp  switch_to_target_interp.hpp  target_weight_recursion.hpp
include/bfio/structures/: amplitude_functor.hpp  array.hpp  box.hpp  constrained_htree_walker.hpp  context.hpp  data.hpp  htree_walker.hpp  low_rank_potential.hpp  low_rank_source.hpp  phase_functor.hpp  plan.hpp  point_grid.hpp  potential_field.hpp  source.hpp  weight_grid.hpp  weight_grid_list.hpp
include/bfio/tools/: blas.hpp  flatten_constrained_htree_index.hpp  flatten_htree_index.hpp  imag_exp.hpp  lagrange.hpp  lapack.hpp  local_data.hpp  mpi.hpp  special_functions.hpp  timer.hpp  twiddle.hpp  uniform.hpp
include/dist-butterfly/: Butterfly.hpp  INUFT.hpp  LNUFT.hpp  config.h.cmake  constants.hpp  functors.hpp  structures.hpp  tools.hpp
include/dist-butterfly/butterfly/: L2L.hpp  M2L.hpp  M2M.hpp  context.hpp  initialize_weights.hpp  potential_field.hpp  source_weight_recursion.hpp  switch_to_target_interp.hpp  target_weight_recursion.hpp
include/dist-butterfly/functors/: amplitude.hpp  phase.hpp
include/dist-butterfly/inuft/: context.hpp  form_check_potentials.hpp  form_equivalent_sources.hpp  initialize_check_potentials.hpp  potential_field.hpp
include/dist-butterfly/lnuft/: M2L.hpp  context.hpp  ft_phases.hpp  potential_field.hpp  switch_to_target_interp.hpp
include/dist-butterfly/structures/: box.hpp  constrained_htree_walker.hpp  htree_walker.hpp  low_rank_potential.hpp  plan.hpp  point_grid.hpp  source.hpp  weight_grid.hpp  weight_grid_list.hpp
include/dist-butterfly/tools/: .mpi.hpp.swp  blas.hpp  flatten_constrained_htree_index.hpp  flatten_htree_index.hpp  lapack.hpp  mpi.hpp  special_functions.hpp  timer.hpp  twiddle.hpp
templateExercises/: Functor.cpp  LoopDown.cpp  Power.cpp
test/: CHTreeWalker.cpp  HTreeWalker.cpp  Transform.cpp
test/Transform/: 3DWave.cpp  Accuracy.cpp  Random3DWaves.cpp
test/htree/: CHTreeWalker.cpp  ConstrainedHTreeWalker.cpp  HTreeWalker.cpp
test/transform/: Accuracy.cpp  Backproj-2d.cpp  GenRadon-2d.cpp  GenRadon-3d.cpp  GeneralizedRadon.cpp  HypRadon-2d.cpp  Logarithmic.cpp  NonUniformFT-2d.cpp  NonUniformFT-3d.cpp  NonUniformFT.cpp  Random3DWaves.cpp  UpWave-3d.cpp  UpWave.cpp  VariableUpWave-2d.cpp  VariableUpWave.cpp
test/tree/: CHTreeWalker.cpp  HTreeWalker.cpp
